# freedict

./: .gitignore  Makefile.am  Makefile.in  SConstruct  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
data/: fd.db3
dicts/: INDEX  Makefile.am
doc/: issue.txt
pixmaps/: Makefile.am
src/: .sconsign.dblite  Makefile.am  Makefile.in  SConscript  fd-clipboard.c  fd-clipboard.h  fd-common.h  fd-dict.c  fd-dict.h  fd-iciba.c  fd-iciba.h  fd-lookup.c  fd-lookup.h  fd-stage.c  fd-stage.h  fd-str.c  fd-str.h  fd-systray.c  fd-systray.h  fd-user-dict.c  fd-user-dict.h  fd-utils.c  fd-utils.h  fd-window.c  fd-window.h  gdk_support.c  gdk_support.h  gtk_support.c  gtk_support.h  main.c
ui/: stage_window.glade
